# prop-cc

./: Makefile  Makefile.am  Makefile.in  README  configure  configure.ac  libtool  prop.am
VisualStudio2010/: prop.props  prop.targets  prop.xml
VisualStudio2010/ADLib/: ADLib.vcxproj
VisualStudio2010/include/sys/: time.h
VisualStudio2010/prop/: prop.vcxproj  prop.vcxproj.filters
VisualStudio2010/prop pcc/: prop pcc.vcxproj
app/willard/: list.h  paige-aux.cc  paige.cc  paige.h  paige.pcc  paige.ph  parser.cc  parser.h  parser.pcc  phase1.cc  phase1.h  phase2.cc  phase2.h  phase3.cc  phase3.h  phase4.cc  phase4.h  phase5.cc  phase5.h  proj.h  querygraph.cc  querygraph.h  rename.cc  rename.h  smap.h  willard-ast.cc  willard-ast.h  willard.cc  willard.h
demos/: Makefile  Makefile.am  Makefile.in
include/: Makefile.in
include/AD/config/: config.h
include/AD/contain/: arraycol.h  bag.h  dchbag.h  dchset.h  hashbag.h  hashset.h  linklist.h  map.h  priqueue.h  seqcol.h  set.h  stackcol.h
include/AD/trees/: avl.h
lib-src/: Makefile
lib-src/automata/: Makefile  Makefile.in
lib-src/backend-tools/: Makefile
lib-src/contain/: Makefile
lib-src/csp/: Makefile
lib-src/gc/: Makefile
lib-src/generic/: Makefile
lib-src/graph/: Makefile
lib-src/graphtype/: Makefile
lib-src/hash/: Makefile
lib-src/memory/: Makefile
lib-src/numeric/: Makefile
lib-src/persist/: Makefile
lib-src/pretty/: Makefile
lib-src/prettypr/: Makefile
lib-src/prop/: Makefile
lib-src/rete/: Makefile
lib-src/rewrite/: Makefile  Makefile.in
lib-src/strings/: Makefile
lib-src/symbolic/: Makefile
lib-src/trees/: Makefile
lib-src/tries/: Makefile
lib-src/visualize/: Makefile
prop-src/: Makefile  Makefile.in  codegen.cc  codegen.pcc  gcgen.cc  gcgen.pcc  prop-main.cc  prop-main.pcc
tests/: Makefile  Makefile.am  Makefile.in  list1.pcc  list2.pcc  persist1.pcc  persist2.pcc  poly2.pcc  printer1.pcc  qa7.cc  qa8.cc  regexp.pcc  rewriting2.pcc  rewriting3.pcc  rewriting5.pcc  rewriting6.pcc  rewriting7.pcc  test_gc17.cc
