# Copyright (c) 2011 Argonne National Laboratory
# All rights reserved.
# 
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
# 1. Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the above copyright
#    notice, this list of conditions and the following disclaimer in the
#    documentation and/or other materials provided with the distribution.
# 
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
# TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE FOUNDATION OR CONTRIBUTORS
# BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
# POSSIBILITY OF SUCH DAMAGE.

AM_CPPFLAGS = -I$(top_srcdir)/include

PROP_OPTS_LOCAL =
include $(top_srcdir)/prop.am

@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/inference.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/logical_patterns.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rewriting2.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rewriting3.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rewriting5.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rewriting6.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rewriting7.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/regexp.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/list1.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/list2.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/printer1.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/poly2.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/persist1.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/persist2.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/persist3.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tuple.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/insertion_sort.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/merge_sort.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bubble_sort.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_gc2.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_gc3.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_gc4.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_gc5.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_gc9.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_gc10.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_gc11.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_gc12.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_gc17.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_gc18.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/prop1.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/prop2.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/prop3.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/prop4.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/prop5.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/prop6.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/prop7.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/prop8.Ppo@am__quote@
@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/prop9.Ppo@am__quote@

inference_sources_pcc = inference.pcc
logical_patterns_sources_pcc = logical_patterns.pcc
rewriting2_sources_pcc = rewriting2.pcc
rewriting3_sources_pcc = rewriting3.pcc
rewriting5_sources_pcc = rewriting5.pcc
rewriting6_sources_pcc = rewriting6.pcc
rewriting7_sources_pcc = rewriting7.pcc
regexp_sources_pcc = regexp.pcc
list1_sources_pcc = list1.pcc
list2_sources_pcc = list2.pcc
printer1_sources_pcc = printer1.pcc
poly2_sources_pcc = poly2.pcc
persist1_sources_pcc = persist1.pcc
persist2_sources_pcc = persist2.pcc
persist3_sources_pcc = persist3.pcc
tuple_sources_pcc = tuple.pcc
insertion_sort_sources_pcc = insertion_sort.pcc
merge_sort_sources_pcc = merge_sort.pcc
bubble_sort_sources_pcc = bubble_sort.pcc
test_gc2_sources_pcc = test_gc2.pcc
test_gc3_sources_pcc = test_gc3.pcc
test_gc4_sources_pcc = test_gc4.pcc
test_gc5_sources_pcc = test_gc5.pcc
test_gc9_sources_pcc = test_gc9.pcc
test_gc10_sources_pcc = test_gc10.pcc
test_gc11_sources_pcc = test_gc11.pcc
test_gc12_sources_pcc = test_gc12.pcc
test_gc17_sources_pcc = test_gc17.pcc
test_gc18_sources_pcc = test_gc18.pcc
prop1_sources_pcc = prop1.pcc
prop2_sources_pcc = prop2.pcc
prop3_sources_pcc = prop3.pcc
prop4_sources_pcc = prop4.pcc
prop5_sources_pcc = prop5.pcc
prop6_sources_pcc = prop6.pcc
prop7_sources_pcc = prop7.pcc
prop8_sources_pcc = prop8.pcc
prop9_sources_pcc = prop9.pcc

check_PROGRAMS = \
	inference logical_patterns \
	qa1 qa2 qa3 qa5 qa6 qa7 qa8 \
	rewriting2 rewriting3 rewriting5 rewriting6 rewriting7 \
	regexp list1 list2 printer1 \
	poly2 \
	persist1 persist2 persist3 \
	tuple insertion_sort merge_sort bubble_sort \
	test_gc1 test_gc2 test_gc3 test_gc4 test_gc5 test_gc6 test_gc7 \
	test_gc8 test_gc9 test_gc10 test_gc11 test_gc12 test_gc13 test_gc14 \
	test_gc15 test_gc16 test_gc17 test_gc18 test_gc19 test_gc20 \
	test_gc21 test_gc22 test_gc23 test_gc24 \
	prop1 prop2 prop3 prop4 prop5 prop6 prop7 prop8 prop9

nodist_inference_SOURCES = $(inference_sources_pcc:.pcc=.cc)
nodist_logical_patterns_SOURCES = $(logical_patterns_sources_pcc:.pcc=.cc)
qa1_SOURCES = qa1.cc
qa2_SOURCES = qa2.cc
qa3_SOURCES = qa3.cc
qa5_SOURCES = qa5.cc
qa6_SOURCES = qa6.cc
qa7_SOURCES = qa7.cc
qa8_SOURCES = qa8.cc
nodist_rewriting2_SOURCES = $(rewriting2_sources_pcc:.pcc=.cc)
nodist_rewriting3_SOURCES = $(rewriting3_sources_pcc:.pcc=.cc)
nodist_rewriting5_SOURCES = $(rewriting5_sources_pcc:.pcc=.cc)
nodist_rewriting6_SOURCES = $(rewriting6_sources_pcc:.pcc=.cc)
nodist_rewriting7_SOURCES = $(rewriting7_sources_pcc:.pcc=.cc)
nodist_regexp_SOURCES = $(regexp_sources_pcc:.pcc=.cc)
nodist_list1_SOURCES = $(list1_sources_pcc:.pcc=.cc)
nodist_list2_SOURCES = $(list2_sources_pcc:.pcc=.cc)
nodist_printer1_SOURCES = $(printer1_sources_pcc:.pcc=.cc)
nodist_poly2_SOURCES = $(poly2_sources_pcc:.pcc=.cc)
nodist_persist1_SOURCES = $(persist1_sources_pcc:.pcc=.cc)
nodist_persist2_SOURCES = $(persist2_sources_pcc:.pcc=.cc)
nodist_persist3_SOURCES = $(persist3_sources_pcc:.pcc=.cc)
nodist_tuple_SOURCES = $(tuple_sources_pcc:.pcc=.cc)
nodist_insertion_sort_SOURCES = $(insertion_sort_sources_pcc:.pcc=.cc)
nodist_merge_sort_SOURCES = $(merge_sort_sources_pcc:.pcc=.cc)
nodist_bubble_sort_SOURCES = $(bubble_sort_sources_pcc:.pcc=.cc)
test_gc1_SOURCES = test_gc1.cc
nodist_test_gc2_SOURCES = $(test_gc2_sources_pcc:.pcc=.cc)
nodist_test_gc3_SOURCES = $(test_gc3_sources_pcc:.pcc=.cc)
nodist_test_gc4_SOURCES = $(test_gc4_sources_pcc:.pcc=.cc)
nodist_test_gc5_SOURCES = $(test_gc5_sources_pcc:.pcc=.cc)
test_gc6_SOURCES = test_gc6.cc
test_gc7_SOURCES = test_gc7.cc
test_gc8_SOURCES = test_gc8.cc
nodist_test_gc9_SOURCES = $(test_gc9_sources_pcc:.pcc=.cc)
nodist_test_gc10_SOURCES = $(test_gc10_sources_pcc:.pcc=.cc)
nodist_test_gc11_SOURCES = $(test_gc11_sources_pcc:.pcc=.cc)
nodist_test_gc12_SOURCES = $(test_gc12_sources_pcc:.pcc=.cc)
test_gc13_SOURCES = test_gc13.cc
test_gc14_SOURCES = test_gc14.cc
test_gc15_SOURCES = test_gc15.cc
test_gc16_SOURCES = test_gc16.cc
nodist_test_gc17_SOURCES = $(test_gc17_sources_pcc:.pcc=.cc)
nodist_test_gc18_SOURCES = $(test_gc18_sources_pcc:.pcc=.cc)
test_gc19_SOURCES = test_gc19.cc
test_gc20_SOURCES = test_gc20.cc
test_gc21_SOURCES = test_gc21.cc
test_gc22_SOURCES = test_gc22.cc
test_gc23_SOURCES = test_gc23.cc
test_gc24_SOURCES = test_gc24.cc
nodist_prop1_SOURCES = $(prop1_sources_pcc:.pcc=.cc)
nodist_prop2_SOURCES = $(prop2_sources_pcc:.pcc=.cc)
nodist_prop3_SOURCES = $(prop3_sources_pcc:.pcc=.cc)
nodist_prop4_SOURCES = $(prop4_sources_pcc:.pcc=.cc)
nodist_prop5_SOURCES = $(prop5_sources_pcc:.pcc=.cc)
nodist_prop6_SOURCES = $(prop6_sources_pcc:.pcc=.cc)
nodist_prop7_SOURCES = $(prop7_sources_pcc:.pcc=.cc)
nodist_prop8_SOURCES = $(prop8_sources_pcc:.pcc=.cc)
nodist_prop9_SOURCES = $(prop9_sources_pcc:.pcc=.cc)

EXTRA_DIST = \
	$(inference_sources_pcc) \
	$(logical_patterns_sources_pcc) \
	$(rewriting2_sources_pcc) \
	$(rewriting3_sources_pcc) \
	$(rewriting5_sources_pcc) \
	$(rewriting6_sources_pcc) \
	$(rewriting7_sources_pcc) \
	$(regexp_sources_pcc) \
	$(list1_sources_pcc) \
	$(list2_sources_pcc) \
	$(printer1_sources_pcc) \
	$(poly2_sources_pcc) \
	$(persist1_sources_pcc) \
	$(persist2_sources_pcc) \
	$(persist3_sources_pcc) \
	$(tuple_sources_pcc) \
	$(insertion_sort_sources_pcc) \
	$(merge_sort_sources_pcc) \
	$(bubble_sort_sources_pcc) \
	$(test_gc2_sources_pcc) \
	$(test_gc3_sources_pcc) \
	$(test_gc4_sources_pcc) \
	$(test_gc5_sources_pcc) \
	$(test_gc9_sources_pcc) \
	$(test_gc10_sources_pcc) \
	$(test_gc11_sources_pcc) \
	$(test_gc12_sources_pcc) \
	$(test_gc17_sources_pcc) \
	$(test_gc18_sources_pcc) \
	$(prop1_sources_pcc) \
	$(prop2_sources_pcc) \
	$(prop3_sources_pcc) \
	$(prop4_sources_pcc) \
	$(prop5_sources_pcc) \
	$(prop6_sources_pcc) \
	$(prop7_sources_pcc) \
	$(prop8_sources_pcc) \
	$(prop9_sources_pcc)

BUILT_SOURCES = \
	$(nodist_inference_SOURCES) \
	$(nodist_logical_patterns_SOURCES) \
	$(nodist_rewriting2_SOURCES) \
	$(nodist_rewriting3_SOURCES) \
	$(nodist_rewriting5_SOURCES) \
	$(nodist_rewriting6_SOURCES) \
	$(nodist_rewriting7_SOURCES) \
	$(nodist_regexp_SOURCES) \
	$(nodist_list1_SOURCES) \
	$(nodist_list2_SOURCES) \
	$(nodist_printer1_SOURCES) \
	$(nodist_poly2_SOURCES) \
	$(nodist_persist1_SOURCES) \
	$(nodist_persist2_SOURCES) \
	$(nodist_persist3_SOURCES) \
	$(nodist_tuple_SOURCES) \
	$(nodist_insertion_sort_SOURCES) \
	$(nodist_merge_sort_SOURCES) \
	$(nodist_bubble_sort_SOURCES) \
	$(nodist_test_gc2_SOURCES) \
	$(nodist_test_gc3_SOURCES) \
	$(nodist_test_gc4_SOURCES) \
	$(nodist_test_gc5_SOURCES) \
	$(nodist_test_gc9_SOURCES) \
	$(nodist_test_gc10_SOURCES) \
	$(nodist_test_gc11_SOURCES) \
	$(nodist_test_gc12_SOURCES) \
	$(nodist_test_gc17_SOURCES) \
	$(nodist_test_gc18_SOURCES) \
	$(nodist_prop1_SOURCES) \
	$(nodist_prop2_SOURCES) \
	$(nodist_prop3_SOURCES) \
	$(nodist_prop4_SOURCES) \
	$(nodist_prop5_SOURCES) \
	$(nodist_prop6_SOURCES) \
	$(nodist_prop7_SOURCES) \
	$(nodist_prop8_SOURCES) \
	$(nodist_prop9_SOURCES)

CLEANFILES = \
	$(BUILT_SOURCES) \
	*.report

inference_LDADD = $(top_builddir)/lib-src/libprop.la
logical_patterns_LDADD = $(top_builddir)/lib-src/libprop.la
qa1_LDADD = $(top_builddir)/lib-src/libprop.la
qa2_LDADD = $(top_builddir)/lib-src/libprop.la
qa3_LDADD = $(top_builddir)/lib-src/libprop.la
qa5_LDADD = $(top_builddir)/lib-src/libprop.la
qa6_LDADD = $(top_builddir)/lib-src/libprop.la
qa7_LDADD = $(top_builddir)/lib-src/libprop.la
qa8_LDADD = $(top_builddir)/lib-src/libprop.la
rewriting2_LDADD = $(top_builddir)/lib-src/libprop.la
rewriting3_LDADD = $(top_builddir)/lib-src/libprop.la
rewriting5_LDADD = $(top_builddir)/lib-src/libprop.la
rewriting6_LDADD = $(top_builddir)/lib-src/libprop.la
rewriting7_LDADD = $(top_builddir)/lib-src/libprop.la
regexp_LDADD = $(top_builddir)/lib-src/libprop.la
list1_LDADD = $(top_builddir)/lib-src/libprop.la
list2_LDADD = $(top_builddir)/lib-src/libprop.la
printer1_LDADD = $(top_builddir)/lib-src/libprop.la
poly2_LDADD = $(top_builddir)/lib-src/libprop.la
persist1_LDADD = $(top_builddir)/lib-src/libprop.la
persist2_LDADD = $(top_builddir)/lib-src/libprop.la
persist3_LDADD = $(top_builddir)/lib-src/libprop.la
tuple_LDADD = $(top_builddir)/lib-src/libprop.la
insertion_sort_LDADD = $(top_builddir)/lib-src/libprop.la
merge_sort_LDADD = $(top_builddir)/lib-src/libprop.la
bubble_sort_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc1_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc2_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc3_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc4_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc5_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc6_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc7_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc8_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc9_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc10_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc11_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc12_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc13_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc14_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc15_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc16_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc17_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc18_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc19_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc20_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc21_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc22_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc23_LDADD = $(top_builddir)/lib-src/libprop.la
test_gc24_LDADD = $(top_builddir)/lib-src/libprop.la
prop1_LDADD = $(top_builddir)/lib-src/libprop.la
prop2_LDADD = $(top_builddir)/lib-src/libprop.la
prop3_LDADD = $(top_builddir)/lib-src/libprop.la
prop4_LDADD = $(top_builddir)/lib-src/libprop.la
prop5_LDADD = $(top_builddir)/lib-src/libprop.la
prop6_LDADD = $(top_builddir)/lib-src/libprop.la
prop7_LDADD = $(top_builddir)/lib-src/libprop.la
prop8_LDADD = $(top_builddir)/lib-src/libprop.la
prop9_LDADD = $(top_builddir)/lib-src/libprop.la

